--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,7 +19,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: url("/images/acid_labs.jpg") no-repeat center center fixed;
+      /*background: url("/images/acid_labs.jpg") no-repeat center center fixed;*/
       background-size: cover;
     }
 
@@ -103,6 +103,13 @@
     .hide-admin-button {
       display: none;
       background-color: #3E47F5 !important;
+    }
+
+    .minibit-logo{
+      width: 6%;
+      position: absolute;
+      left: 47%;
+      top: 130px;
     }
   </style>
   <script>
@@ -221,6 +228,7 @@
 </head>
 
 <body>
+   <img class="minibit-logo" src="images/minibit.png">
   <div class="login-container">
     <div class="input-group" id="user_email_id">
       <label for="username">Email</label>
