--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -97,7 +97,7 @@
    & span:last-child {
      text-align: right;
      cursor: pointer;
-     width: 60px;
+     width: 10px;
    }
 
    & span:last-child:hover {
@@ -160,7 +160,7 @@
    cursor: pointer;
 
    & span {
-     width: 30%;
+     width: 70%;
    }
 
    & span:last-child {
@@ -270,8 +270,11 @@
    }
 
    & span:last-child {
-     width: 50px;
+     width: 20px;
      text-align: center;
+   }
+   & span:last-child:hover {
+     font-weight: bold;
    }
  }
 
