--- a/views/tech_content.ejs
+++ b/views/tech_content.ejs
@@ -221,11 +221,11 @@
     const contentContainer = document.getElementById("menu-items-id")
 
     techs.forEach((tech) => {
-      const is_exam = user_exams.filter((ex) => ex.content_id == tech.content_id ).pop()
+      const is_exam = user_exams.filter((ex) => ex.content_id == tech.content_id).pop()
       contentContainer.innerHTML += `<li onclick="setTechContent('${tech.filename}', '${tech.name}', '${tech.content_id}' )" class="menu-item"
           id="menu-item-${tech.filename}">
           ${tech.name}
-          ${is_exam ? `<br/><span>Score: ${is_exam.score}% - ${new Date(is_exam.created).toLocaleDateString('en-GB')}</span>` : "" }
+          ${is_exam ? `<br/><span>Score: ${is_exam.score}% - ${new Date(is_exam.created).toLocaleDateString('en-GB')}</span>` : ""}
         </li>`
     })
   }
@@ -284,8 +284,8 @@
     document.getElementById("take-test-button-id").innerHTML = "Evaluacion " + name
   }
 
-   setTimeout(() => {
-    document.getElementById("take-test-button-id").innerHTML = "Evaluacion " + techs[0].name
+  setTimeout(() => {
+    document.getElementById("take-test-button-id").innerHTML = techs[0] ? "Evaluacion " + techs[0]?.name : "Sin contenido"
     showContentList()
   }, 100)
 </script>
