--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-   <title>Acid Labs</title>
+  <title>Acid Labs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     * {
@@ -21,6 +21,17 @@
       height: 100vh;
       /*background: url("/images/acid_labs.jpg") no-repeat center center fixed;*/
       background-size: cover;
+      animation: appear 2s ease-in-out 1;
+    }
+
+    @keyframes appear {
+      0% {
+        opacity: 0;
+      }
+
+      100% {
+        opacity: 1;
+      }
     }
 
     .login-container {
@@ -38,6 +49,7 @@
       font-size: 24px;
       font-weight: bold;
       margin-bottom: 30px;
+
     }
 
     .logo::after {
@@ -105,11 +117,12 @@
       background-color: #3E47F5 !important;
     }
 
-    .minibit-logo{
+    .minibit-logo {
       width: 6%;
       position: absolute;
       left: 47%;
       top: 130px;
+      animation: coin-flip 2s linear infinite;
     }
   </style>
   <script>
@@ -228,7 +241,7 @@
 </head>
 
 <body>
-   <img class="minibit-logo" src="images/minibit.png">
+  <img class="minibit-logo" src="images/minibit.png">
   <div class="login-container">
     <div class="input-group" id="user_email_id">
       <label for="username">Email</label>
