--- a/views/tech_content.ejs
+++ b/views/tech_content.ejs
@@ -241,6 +241,7 @@
     }
   }
   async function takeTest() {
+    if (!contentId) return
     fetch(
       "/check-exam-date",
       {
@@ -288,6 +289,8 @@
 
   setTimeout(() => {
     document.getElementById("take-test-button-id").innerHTML = techs[0] ? "Evaluacion " + techs[0]?.name : "Sin contenido"
+    console.log(techs[0])
+    contentId = techs[0]?.content_id || null
     showContentList()
   }, 100)
 </script>
