--- a/views/login.ejs
+++ b/views/login.ejs
@@ -140,7 +140,7 @@
 
       try {
         const response = await fetch(
-          `${window.location.protocol}//${window.location.host}/login`,
+          `/login`,
           {
             method: "POST",
             headers: {
@@ -179,7 +179,7 @@
         if (document.getElementById("admin-passphrase").value) {
           try {
             const response = await fetch(
-              `${window.location.protocol}//${window.location.host}/login-admin`,
+              `/login-admin`,
               {
                 method: "POST",
                 headers: {
@@ -211,7 +211,7 @@
       if (document.getElementById("admin-passphrase").value) {
         try {
           const response = await fetch(
-            `${window.location.protocol}//${window.location.host}/login-admin`,
+            `/login-admin`,
             {
               method: "POST",
               headers: {
