--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -89,7 +89,7 @@
 
   </div>
 </body>
- <!-- <script src="/js/exam/_o_.js"></script> -->
+<script src="/js/exam/_o_.js"></script>
 <script src="/js/admin.js"></script>
 <script>/* VARIABLES GLOBALES Y SETEO INICIAL */
   document.body.style.background = 'url("/images/<%= background_image %>") no-repeat center center fixed';
