--- a/views/tech_content.ejs
+++ b/views/tech_content.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Acid Labs</title>
+  <title>Minibit</title>
   <style>
     /* Estilos básicos para mejorar la visualización del markdown */
 
