--- a/views/tech_content.ejs
+++ b/views/tech_content.ejs
@@ -95,9 +95,9 @@
 
     .menu-header {
       padding-bottom: 10px;
-      border-bottom: 1px solid #34495e;
       margin-bottom: 20px;
-      text-align: center;
+      display: flex;
+      justify-content: flex-end;
 
       & h1 {
         background-color: #fff;
@@ -105,6 +105,7 @@
         color: #000;
         border-radius: 10px;
         font-size: 13px;
+        text-align: right;
       }
     }
 
