--- a/views/login.ejs
+++ b/views/login.ejs
@@ -118,9 +118,9 @@
     }
 
     .minibit-logo {
-      width: 6%;
+      width: 20%;
       position: absolute;
-      left: 47%;
+      left: 40%;
       top: 130px;
       animation: coin-flip 2s linear infinite;
     }
@@ -241,7 +241,7 @@
 </head>
 
 <body>
-  <img class="minibit-logo" src="images/minibit.png">
+  <img class="minibit-logo" src="images/acidlogo.png">
   <div class="login-container">
     <div class="input-group" id="user_email_id">
       <label for="username">Email</label>
