--- a/views/exam.ejs
+++ b/views/exam.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Minibit</title>
+  <title>Acid Labs</title>
   <link rel="stylesheet" href="/css/exam.css" />
 </head>
 <body>
