--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Minibit</title>
+  <title>Acid Labs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     * {
